[package]
name = "nodetop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
prometheus-parse = "0.2.2"
port_scanner = "0.1.5"
rayon = "1.5.1"
reqwest = { version = "0.11.10", features = ["blocking"] }
structopt = "0.3.26"
ctrlc = "3.2.2"
plotters = "0.3.1"
cmake = "=0.1.45"
itertools = "0.10.3"